打磨接口文档的用户模块的用户地址簿控制器

--- a/projectTemplate/documents/接口文档v1.0.MD
+++ b/projectTemplate/documents/接口文档v1.0.MD
@@ -1241,11 +1241,11 @@
 #### 获取个人用户地址簿接口
 ##### 基础信息
 - **接口名称**: 获取个人用户地址簿
-- **接口路径**: `/api/user/user/address/{id}`
+- **接口路径**: `/api/user/userAddress/list/{id}`
 - **请求方法**: GET
-- **接口权限**:需要user.list权限或者访问者的id等于参数的id
-- **接口描述**: 查看用户的详细信息
-- **接口实现**: 在用户端个人中心或后台的用户管理可查询用户端地址簿
+- **接口权限**: 登录而且访问者的id等于参数的id
+- **接口描述**: 获取个人用户地址簿
+- **接口实现**: 在用户端个人中心或后台的用户管理可查询用户端地址簿,返回List<UserAddressDTO>
 - 只需返回没有被逻辑删除的地址
 ##### 请求参数
 ###### 请求头
@@ -1254,19 +1254,13 @@
 | Content-Type | 是    | string | 请求体类型 | application/json                        |
 | token        | 是    | string | 令牌    | eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9... |
 
-###### 请求体
-| 参数名    | 是否必填 | 数据类型   | 说明  | 示例  |
-|--------|------|--------|-----|-----|
-| id     | 是    | Long   | id  | 1   |
-
-
 ##### 响应数据
 ###### 响应状态码
 - 200: 请求成功
 - 400: 请求参数错误
 - 500: 服务器错误
 
-###### 响应体
+###### 响应体 List<UserAddressDTO>
 ```json
 {
   "code": 200,
@@ -1287,10 +1281,129 @@
 ```
 
 #### 新增地址簿接口
+##### 基础信息
+- **接口名称**: 新增地址簿
+- **接口路径**: `/api/user/userAddress/add`
+- **请求方法**: POST
+- **接口权限**: 登录而且访问者的id等于参数的id
+- **接口描述**: 新增地址簿,仅允许用户添加地址
+- **接口实现**: 传入UserAddressDTO,一个用户最多添加5个正常状态的地址簿,
+- 如果将地址设为默认地址,则将之前默认地址设为非默认地址
+- 用redis存储添加的时间戳,过期5秒,redis数据存在期间不能添加数据
+##### 请求参数
+###### 请求头
+| 参数名          | 是否必填 | 数据类型   | 说明    | 示例                                      |
+|--------------|------|--------|-------|-----------------------------------------|
+| Content-Type | 是    | string | 请求体类型 | application/json                        |
+| token        | 是    | string | 令牌    | eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9... |
+
+###### 请求体 UserAddressDTO
+```json
+{
+  "id": 1,
+  "receiver": "张三",
+  "phone": "15626448742",
+  "province": "广东",
+  "city": "汕头",
+  "district": "濠江",
+  "address": "达濠街道西元大盘1010号",
+  "isDefault": true
+}
+```
+
+
+##### 响应数据
+###### 响应状态码
+- 200: 请求成功
+- 400: 请求参数错误
+- 500: 服务器错误
+
+###### 响应体
+```json
+{
+  "code": 200,
+  "msg": "操作成功",
+  "data": null
+}
+```
 
 #### 修改地址簿接口
+##### 基础信息
+- **接口名称**: 修改地址簿
+- **接口路径**: `/api/user/userAddress/update`
+- **请求方法**: POST
+- **接口权限**: 登录而且访问者的id等于参数的id
+- **接口描述**: 修改地址簿
+- **接口实现**: 传入List<UserAddressDTO>,注意只将第一个默认地址设为默认地址
+##### 请求参数
+###### 请求头
+| 参数名          | 是否必填 | 数据类型   | 说明    | 示例                                      |
+|--------------|------|--------|-------|-----------------------------------------|
+| Content-Type | 是    | string | 请求体类型 | application/json                        |
+| token        | 是    | string | 令牌    | eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9... |
+
+###### 请求体 List<UserAddressDTO>
+```json
+[
+  {
+    "id": 1,
+    "receiver": "张三",
+    "phone": "15626448742",
+    "province": "广东",
+    "city": "汕头",
+    "district": "濠江",
+    "address": "达濠街道西元大盘1010号",
+    "isDefault": true
+  }
+]
+```
+
+
+##### 响应数据
+###### 响应状态码
+- 200: 请求成功
+- 400: 请求参数错误
+- 500: 服务器错误
+
+###### 响应体
+```json
+{
+  "code": 200,
+  "msg": "操作成功",
+  "data": null
+}
+```
 
 #### 删除地址簿接口
+##### 基础信息
+- **接口名称**: 删除地址簿
+- **接口路径**: `/api/user/userAddress/delete/{id}`
+- **请求方法**: DELETE
+- **接口权限**: 登录而且访问者的id等于参数的id
+- **接口描述**: 删除地址簿
+- **接口实现**: 逻辑删除地址簿
+##### 请求参数
+###### 请求头
+| 参数名          | 是否必填 | 数据类型   | 说明    | 示例                                      |
+|--------------|------|--------|-------|-----------------------------------------|
+| Content-Type | 是    | string | 请求体类型 | application/json                        |
+| token        | 是    | string | 令牌    | eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9... |
+
+
+##### 响应数据
+###### 响应状态码
+- 200: 请求成功
+- 400: 请求参数错误
+- 500: 服务器错误
+
+###### 响应体 List<UserAddressVO>
+```json
+{
+  "code": 200,
+  "msg": "操作成功",
+  "data": null
+}
+```
 
 ### 商户补丁相关接口 MerchantSupplementController
 
