打磨接口文档的用户模块

--- a/projectTemplate/documents/接口文档v1.0.MD
+++ b/projectTemplate/documents/接口文档v1.0.MD
@@ -1427,11 +1427,6 @@
 | Content-Type | 是    | string | 请求体类型 | application/json                        |
 | token        | 是    | string | 令牌    | eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9... |
 
-###### 请求体
-| 参数名         | 是否必填 | 数据类型    | 说明   | 示例                            |
-|-------------|------|---------|------|-------------------------------|
-| id          | 是    | Long    | id   | none                          |
-
 
 ##### 响应数据
 ###### 响应状态码
@@ -1457,8 +1452,8 @@
 - **接口路径**: `/api/user/merchantSupplement/update/custom`
 - **请求方法**: PUT
 - **接口权限**: 需要user.update权限或更新者的id等于参数id
-- **接口描述**: 同时更新merchant_supplement表的shopName,shopCategoryId和shopAddress字段
-- **接口实现**: 更新基础商户信息,查询不到用户或用户被逻辑删除则不应该执行更新
+- **接口描述**: 更新基础商户信息
+- **接口实现**: 传入UpdateMerchantCustomDTO,更新基础商户信息,查询不到用户或用户被逻辑删除则不应该执行更新
 
 ##### 请求参数
 ###### 请求头
@@ -1467,13 +1462,15 @@
 | Content-Type | 是    | string | 请求体类型 | application/json                        |
 | token        | 是    | string | 令牌    | eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9... |
 
-###### 请求体
-| 参数名              | 是否必填 | 数据类型   | 说明     | 示例            |
-|------------------|------|--------|--------|---------------|
-| id               | 是    | Long   | id     | 1             |
-| shopName         | 是    | String | 店铺名称   | 广文书店          |
-| shopCategoryId   | 是    | String | 店铺类别   | 1             |
-| shopAddress      | 是    | String | 店铺地址   | 汕头达濠西元大盘1010号 |
+###### 请求体 UpdateMerchantCustomDTO
+```json
+{
+  "id(Long)": 1,
+  "shopName(String)": "广中书店",
+  "shopCategoryId(String)": "1",
+  "shopAddress(String)": "汕头达濠西元大盘1010号"
+}
+```
 
 ##### 响应数据
 ###### 响应状态码
@@ -1496,8 +1493,10 @@
 - **接口路径**: `/api/user/merchantSupplement/update/license`
 - **请求方法**: PUT
 - **接口权限**: 需要user.update权限或更新者的id等于参数id
-- **接口描述**: 同时更新merchant_supplement表的license,licenseImage字段
-- **接口实现**: 提供许可证后异步通知管理员审核,应该审核后管理员手动为其升级角色,但这里实现为直接为该用户升级角色
+- **接口描述**: 许可证认证
+- **接口实现**: 传入UpdateMerchantLicenseDTO,提供许可证后异步通知管理员审核,应该审核后管理员手动为其升级角色,
+- 但这里实现为直接为该用户升级角色
+- 查询不到用户或用户被逻辑删除则不应该执行更新
 
 ##### 请求参数
 ###### 请求头
@@ -1506,12 +1505,14 @@
 | Content-Type | 是    | string | 请求体类型 | application/json                        |
 | token        | 是    | string | 令牌    | eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9... |
 
-###### 请求体
-| 参数名              | 是否必填 | 数据类型   | 说明     | 示例  |
-|------------------|------|--------|--------|-----|
-| id               | 是    | Long   | id     | 1   |
-| shopLicense      | 是    | String | 营业执照   | xxx |
-| shopLicenseImage | 是    | String | 营业执照图片 | xxx |
+###### 请求体 UpdateMerchantLicenseDTO
+```json
+{
+  "id(Long)": 1,
+  "shopLicense(String)": "xxx",
+  "shopLicenseImage(String)": "xxx"
+  }
+```
 
 ##### 响应数据
 ###### 响应状态码
@@ -1548,12 +1549,7 @@
 ###### 请求体
 | 参数名        | 是否必填 | 数据类型    | 说明     | 示例    |
 |------------|------|---------|--------|-------|
-| id         | 否    | Integer | id     | null  |
 | name       | 是    | string  | 店铺分类名  | 家居    |
-| code       | 是    | string  | 店铺分类编码 | 1001  |
-| createTime | 否    | Date    | 创建时间   | null  |
-| updateTime | 否    | Date    | 修改时间   | null  |
-| deleted    | 否    | boolean | 逻辑删除   | false |
 
 ##### 响应数据
 ###### 响应状态码
@@ -1575,7 +1571,7 @@
 - **接口名称**: 分页查询店铺分类
 - **接口路径**: `/api/user/shopCategory/list`
 - **请求方法**: GET
-- **接口权限**:需要shopCategory.list权限
+- **接口权限**: 需要shopCategory.list权限
 - **接口描述**: 在管理员的角色管理主界面查看所有存在的店铺分类
 - **接口实现**: 在管理员的角色管理主界面查看所有存在的店铺分类,支持根据关键字搜索,
 - 在mysql为店铺分类名建立索引以支持关键字搜索
@@ -1644,14 +1640,9 @@
 | token        | 是    | string | 令牌    | eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9... |
 
 ###### 请求体
-| 参数名        | 是否必填 | 数据类型    | 说明   | 示例        |
-|------------|------|---------|------|-----------|
-| id         | 是    | Integer | id   | 1         |
-| name       | 否    | string  | 店铺分类名  | ROLE_USER |
-| code       | 否    | string  | 店铺分类编码 | 1001      |
-| createTime | 否    | Date    | 创建时间 | null      |
-| updateTime | 否    | Date    | 修改时间 | null      |
-| deleted    | 否    | boolean | 逻辑删除 | false     |
+| 参数名  | 是否必填 | 数据类型   | 说明    | 示例        |
+|------|------|--------|-------|-----------|
+| name | 否    | string | 店铺分类名 | ROLE_USER |
 
 ##### 响应数据
 ###### 响应状态码
@@ -1674,23 +1665,16 @@
 - **接口路径**: `/api/user/shopCategory/delete/{id}`
 - **请求方法**: DELETE
 - **接口权限**:需要shopCategory.delete权限
-- **接口描述**: 只有管理员有权限删除店铺分类,删除店铺分类按钮在店铺分类管理界面
-- **接口实现**:- 删除店铺分类包括根据id将role表的主键等于id,
-- role_permissions表role_id等于id和user_role表role_id等于id的行逻辑删除
-- 不能删除"默认分类",然后遍历merchant_supplement表,将涉及被删除分类的记录变成"默认分类"
+- **接口描述**: 只有超级管理员有权限删除店铺分类,删除店铺分类按钮在店铺分类管理界面
+- **接口实现**:- 删除店铺分类,然后遍历merchant_supplement表,将涉及被删除分类的记录变成"默认分类"
 - 只有超级管理员才可以删除店铺分类
+- 数据库第一个分类是默认分类,不能删除默认分类
 ##### 请求参数
 ###### 请求头
 | 参数名          | 是否必填 | 数据类型   | 说明    | 示例                                      |
 |--------------|------|--------|-------|-----------------------------------------|
 | Content-Type | 是    | string | 请求体类型 | application/json                        |
 | token        | 是    | string | 令牌    | eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9... |
-
-###### 请求体
-| 参数名         | 是否必填 | 数据类型    | 说明   | 示例                            |
-|-------------|------|---------|------|-------------------------------|
-| id          | 是    | Long    | id   | none                          |
-
 
 ##### 响应数据
 ###### 响应状态码
@@ -1706,9 +1690,7 @@
 {
   "code": 200,
   "msg": "操作成功",
-  "data":{
-    "id": 11232439947510
-  }
+  "data": null
 }
 ```
 
@@ -1778,7 +1760,7 @@
 - **接口名称**: 查看角色详细信息
 - **接口路径**: `/api/user/role/detail/{id}`
 - **请求方法**: GET
-- **接口权限**:需要role.list权限
+- **接口权限**: 需要role.list权限
 - **接口描述**: 在管理员的角色管理主界面查看角色详情
 - **接口实现**: 查询role和permissions表中获取角色信息和角色关联的权限
 - 注意无论角色是否被逻辑删除都应该被被查到,但权限应该是没有被逻辑删除的
@@ -1788,13 +1770,6 @@
 |--------------|------|--------|-------|-----------------------------------------|
 | Content-Type | 是    | string | 请求体类型 | application/json                        |
 | token        | 是    | string | 令牌    | eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9... |
-
-
-###### 请求体
-| 参数名 | 是否必填 | 数据类型    | 说明    | 示例 |
-|-----|------|---------|-------|----|
-| id  | 是    | string  | 关键字   | 1  |
-
 
 ##### 响应数据
 ###### 响应状态码
@@ -1832,10 +1807,10 @@
 #### 手动为特定用户分配角色接口
 ##### 基础信息
 - **接口名称**: 手动为特定用户分配角色
-- **接口路径**: `/api/user/role/assignRole`
+- **接口路径**: `/api/user/role/assign`
 - **请求方法**: POST
-- **接口权限**:需要user.update权限
-- **接口描述**: 管理员可以在用户管理界面查看用户详细信息的时候为某用户分配角色,
+- **接口权限**: 需要user.update权限
+- **接口描述**: 管理员可以在用户管理界面查看用户详细信息的时候为某用户分配角色
 - **接口实现**:一个用户可以分配最多三个角色,分别是最多一个购物者角色,一个商户角色和一个管理员角色,
 - 如果发现roleId不满足分配角色合法性则拒绝分配,
 - 否则根据参数查询用户和用户的角色,然后删除用户拥有的角色,然后重新增加角色
@@ -1877,7 +1852,7 @@
 - **接口名称**: 添加角色
 - **接口路径**: `/api/user/role/add`
 - **请求方法**: POST
-- **接口权限**:需要role.add权限
+- **接口权限**: 需要role.add权限
 - **接口描述**: 管理员可以在角色管理界面添加角色
 - **接口实现**: 添加角色
 ##### 请求参数
@@ -1888,14 +1863,9 @@
 | token        | 是    | string | 令牌    | eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9... |
 
 ###### 请求体
-| 参数名        | 是否必填 | 数据类型    | 说明   | 示例        |
-|------------|------|---------|------|-----------|
-| id         | 否    | Integer | id   | null      |
-| roleName   | 是    | string  | 角色名  | ROLE_USER |
-| roleCode   | 是    | string  | 角色编码 | 1001      |
-| createTime | 否    | Date    | 创建时间 | null      |
-| updateTime | 否    | Date    | 修改时间 | null      |
-| deleted    | 否    | boolean | 逻辑删除 | false     |
+| 参数名  | 是否必填 | 数据类型    | 说明   | 示例        |
+|------|------|---------|------|-----------|
+| name | 是    | string  | 角色名  | ROLE_USER |
 
 ##### 响应数据
 ###### 响应状态码
@@ -1917,7 +1887,7 @@
 - **接口名称**: 更新角色
 - **接口路径**: `/api/user/role/update`
 - **请求方法**: PUT
-- **接口权限**:需要role.update权限
+- **接口权限**: 需要role.update权限
 - **接口描述**: 管理员可以在角色管理界面更新角色信息
 - **接口实现**: 更新角色信息,角色被逻辑删除则拒绝更新
 ##### 请求参数
@@ -1928,14 +1898,9 @@
 | token        | 是    | string | 令牌    | eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9... |
 
 ###### 请求体
-| 参数名        | 是否必填 | 数据类型    | 说明   | 示例        |
-|------------|------|---------|------|-----------|
-| id         | 是    | Integer | id   | 1         |
-| roleName   | 否    | string  | 角色名  | ROLE_USER |
-| roleCode   | 否    | string  | 角色编码 | 1001      |
-| createTime | 否    | Date    | 创建时间 | null      |
-| updateTime | 否    | Date    | 修改时间 | null      |
-| deleted    | 否    | boolean | 逻辑删除 | false     |
+| 参数名  | 是否必填 | 数据类型    | 说明   | 示例        |
+|------|------|---------|------|-----------|
+| name | 否    | string  | 角色名  | ROLE_USER |
 
 ##### 响应数据
 ###### 响应状态码
@@ -1957,9 +1922,9 @@
 - **接口名称**: 删除角色
 - **接口路径**: `/api/user/role/delete/{id}`
 - **请求方法**: DELETE
-- **接口权限**:需要role.delete权限
-- **接口描述**: 只有管理员有权限删除角色,删除角色按钮在角色管理界面
-- **接口实现**:- 删除角色包括根据id将role表的主键等于id,
+- **接口权限**: 需要role.delete权限
+- **接口描述**: 只有超级管理员有权限删除角色,删除角色按钮在角色管理界面
+- **接口实现**: 删除角色包括根据id将role表的主键等于id,
 - role_permissions表role_id等于id和user_role表role_id等于id的行逻辑删除,
 - 不能删除每个角色组的"默认角色",然后遍历用户,如果用户有该角色则将该角色变成所在组的"默认角色"
 - 只有超级管理员才可以删除角色
@@ -1969,12 +1934,6 @@
 |--------------|------|--------|-------|-----------------------------------------|
 | Content-Type | 是    | string | 请求体类型 | application/json                        |
 | token        | 是    | string | 令牌    | eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9... |
-
-###### 请求体
-| 参数名         | 是否必填 | 数据类型    | 说明   | 示例                            |
-|-------------|------|---------|------|-------------------------------|
-| id          | 是    | Long    | id   | none                          |
-
 
 ##### 响应数据
 ###### 响应状态码
@@ -1994,18 +1953,18 @@
 }
 ```
 
-### 权限相关接口 PermissionsController
+### 权限相关接口 PermissionController
 
 #### 分页获取权限列表接口
 ##### 基础信息
-- **接口名称**: 分页获取角色列表
-- **接口路径**: `/api/user/permissions/list`
+- **接口名称**: 分页获取权限列表
+- **接口路径**: `/api/user/permission/list`
 - **请求方法**: GET
-- **接口权限**:需要permissions.list权限
+- **接口权限**: 需要permission.list权限
 - **接口描述**: 在管理员的权限管理主界面查看所有存在的权限
 - **接口实现**: 在管理员的权限管理主界面查看所有存在的权限,支持根据关键字搜索,
 - 在mysql为权限值建立索引以支持关键字搜索
-- 返回List<Permissions>并由PageResult包装
+- 返回List<Permission>并由PageResult包装
 - 注意无论用户是否被逻辑删除都应该被被查到
 - - **接口备注**:由于权限数量较少也只能根据模块分组
 - ,所以后期也可以改为分组获取全部权限
@@ -2055,16 +2014,17 @@
 }
 ```
 
-#### 为角色分配权限接口
+#### 手动为角色分配权限接口
 ##### 基础信息
 - **接口名称**: 手动为特定角色分配权限
-- **接口路径**: `/api/user/permissions/assignPermissions`
+- **接口路径**: `/api/user/permission/assign`
 - **请求方法**: POST
-- **接口权限**:需要role.update权限
+- **接口权限**: 需要role.update权限
 - **接口描述**: 管理员可以在角色管理界面查看角色详细信息的时候为某角色分配权限,
-- **接口实现**:permissionsId都指向存在的正常运作的权限才可继续执行接口,
+- **接口实现**: permissionIds都指向存在的正常运作的权限才可继续执行接口,
 - 根据参数查询角色和角色的权限,然后删除角色拥有的权限,然后重新增加权限
 - 只有超级管理员才可以给角色分配权限
+- 如果角色被删除则拒绝执行接口
 ##### 请求参数
 ###### 请求头
 | 参数名          | 是否必填 | 数据类型   | 说明    | 示例                                      |
@@ -2074,10 +2034,10 @@
 
 
 ###### 请求体
-| 参数名            | 是否必填 | 数据类型    | 说明     | 示例    |
-|----------------|------|---------|--------|-------|
-| roleId         | 是    | Integer | 角色id   | 1     |
-| permissionsIds | 是    | Integer | 权限id数组 | 1,2,3 |
+| 参数名           | 是否必填 | 数据类型    | 说明     | 示例    |
+|---------------|------|---------|--------|-------|
+| roleId        | 是    | Integer | 角色id   | 1     |
+| permissionIds | 是    | Integer | 权限id数组 | 1,2,3 |
 
 
 ##### 响应数据
@@ -2098,9 +2058,9 @@
 #### 添加权限接口
 ##### 基础信息
 - **接口名称**: 添加权限
-- **接口路径**: `/api/user/permissions/add`
+- **接口路径**: `/api/user/permission/add`
 - **请求方法**: POST
-- **接口权限**:需要permissions.add权限
+- **接口权限**: 需要permission.add权限
 - **接口描述**: 管理员可以在权限管理界面添加权限
 - **接口实现**: 添加权限
 ##### 请求参数
@@ -2113,12 +2073,8 @@
 ###### 请求体
 | 参数名             | 是否必填 | 数据类型    | 说明   | 示例        |
 |-----------------|------|---------|------|-----------|
-| id              | 否    | Integer | id   | null      |
 | name            | 是    | string  | 角色名  | ROLE_USER |
 | permissionValue | 是    | string  | 角色编码 | 1001      |
-| createTime      | 否    | Date    | 创建时间 | null      |
-| updateTime      | 否    | Date    | 修改时间 | null      |
-| deleted         | 否    | boolean | 逻辑删除 | false     |
 
 ##### 响应数据
 ###### 响应状态码
@@ -2138,7 +2094,7 @@
 #### 更改权限内容接口
 ##### 基础信息
 - **接口名称**: 更新权限内容接口
-- **接口路径**: `/api/user/permissions/update`
+- **接口路径**: `/api/user/permission/update`
 - **请求方法**: PUT
 - **接口权限**:需要permissions.update权限
 - **接口描述**: 管理员可以在权限管理界面更新权限信息
@@ -2153,12 +2109,8 @@
 ###### 请求体
 | 参数名             | 是否必填 | 数据类型    | 说明   | 示例        |
 |-----------------|------|---------|------|-----------|
-| id              | 是    | Integer | id   | 1         |
-| name            | 否    | string  | 角色名  | ROLE_USER |
-| permissionValue | 否    | string  | 角色编码 | 1001      |
-| createTime      | 否    | Date    | 创建时间 | null      |
-| updateTime      | 否    | Date    | 修改时间 | null      |
-| deleted         | 否    | boolean | 逻辑删除 | false     |
+| name            | 是    | string  | 角色名  | ROLE_USER |
+| permissionValue | 是    | string  | 角色编码 | 1001      |
 
 ##### 响应数据
 ###### 响应状态码
@@ -2178,13 +2130,12 @@
 #### 删除权限接口
 ##### 基础信息
 - **接口名称**: 删除权限
-- **接口路径**: `/api/user/permissions/delete/{id}`
+- **接口路径**: `/api/user/permission/delete/{id}`
 - **请求方法**: DELETE
-- **接口权限**:需要permissions.delete权限
+- **接口权限**: 需要permission.delete权限
 - **接口描述**: 只有超级管理员有权限删除权限,删除权限按钮在权限管理界面
-- **接口实现**:- 删除权限包括根据id将permissions表的主键等于id,
+- **接口实现**: 删除权限包括根据id将permissions表的主键等于id,
 - role_permissions表permissions_id等于id的行逻辑删除
-- 只有超级管理员才可以删除角色
 ##### 请求参数
 ###### 请求头
 | 参数名          | 是否必填 | 数据类型   | 说明    | 示例                                      |
