打磨接口文档的订单模块

--- a/projectTemplate/documents/接口文档v1.0.MD
+++ b/projectTemplate/documents/接口文档v1.0.MD
@@ -3750,7 +3750,7 @@
 #### 查看订单详细信息接口
 ##### 基础信息
 - **接口名称**: 查看订单详细信息
-- **接口路径**: `/api/order/orderMain/orderDetail/{id}`
+- **接口路径**: `/api/order/orderMain/detail/{id}`
 - **请求方法**: GET
 - **接口权限**:需要order.list权限而且(访问者的id等于订单的userId或访问者是管理员)
 - **接口描述**: 查看订单的详细信息,商户端和管理端点击订单时访问该接口
@@ -4208,7 +4208,7 @@
 - **请求方法**: POST
 - **接口权限**: 非基础角色登录后可用
 - **接口描述**: 用户访问涉及支付的接口时调用该接口
-- **接口实现**: 生成财务
+- **接口实现**: 传入FinancialFlowDTO,生成财务
 ##### 请求参数
 ###### 请求头
 | 参数名          | 是否必填 | 数据类型   | 说明    | 示例                                      |
@@ -4246,8 +4246,7 @@
 - **请求方法**: GET
 - **接口权限**: 需要order.list权限
 - **接口描述**: 后台端在订单管理页面查看网站的所有财务列表
-- **接口实现**: 后台端在订单管理页面查看网站的所有财务列表
-- 返回List<FinancialFlow>并由PageResult包装
+- **接口实现**: 返回List<FinancialFlow>并由PageResult包装
 ##### 请求参数
 ###### 请求头
 | 参数名          | 是否必填 | 数据类型   | 说明    | 示例                                      |
@@ -4262,9 +4261,6 @@
 | pageNum  | 否(默认1)  | Integer | 页码    | 1  |
 | pageSize | 否(默认10) | Integer | 每页数据量 | 10 |
 | search   | 否(默认"") | String  | 关键字   | "" |
-
-
-
 
 ##### 响应数据
 ###### 响应状态码
