试图重构登录业务,值得一提的是登录业务现在只需查询一次数据库了而不是3次,性能提高,此外我还应用了StringToListTypeHandler来转换查询数据的类型,不过我还需要优化这个业务的性能

--- a/projectTemplate/documents/接口文档v1.0.MD
+++ b/projectTemplate/documents/接口文档v1.0.MD
@@ -30,6 +30,7 @@
 | X-Real-IP       | 否（由代理层传递） | string | 客户端公网 IP（通常由 Nginx 等反向代理设置） | 220.181.38.148                            |
 | X-Forwarded-For | 否（由代理层传递） | string | 经过代理的客户端 IP 链               | 220.181.38.148, 10.0.0.1                  |
 | X-Local-IP      | 否         | string | 客户端局域网 IP（前端自定义传递）          | 192.168.1.100                             |
+| client(String)  | 否(前端传递)   | string | 客户端名称                       | 后台端                                       |
 
 ###### 请求体 UserLoginForm
 ```json
@@ -42,7 +43,6 @@
   "phoneCode?(String)": null,
   "emailCode?(String)": null,
   "LoginType(String)": "PASSWORD",
-  "client(String)": "USER"
 }
 ```
 ##### 响应数据
@@ -60,6 +60,8 @@
   }
 }
 ```
+
+#### 加载上次登录信息接口
 
 #### 用户登录接口的密码登录接口
 ##### 基础信息
@@ -89,7 +91,7 @@
   "code": 200,
   "msg": "操作成功",
   "data": {
-    "phoneCode(String)": "123456",
+    "password(String)": "123456",
     "currentUserDTO(CurrentUserDTO)": {
       "id(Long)": 1,
       "username(String)": "wddyxd",
