--- a/projectTemplate/documents/接口文档v1.0.MD
+++ b/projectTemplate/documents/接口文档v1.0.MD
@@ -42,7 +42,7 @@
   "password?(String)": "123",
   "phoneCode?(String)": null,
   "emailCode?(String)": null,
-  "LoginType(String)": "PASSWORD",
+  "LoginType(String)": "PASSWORD"
 }
 ```
 ##### 响应数据
@@ -60,8 +60,6 @@
   }
 }
 ```
-
-#### 加载上次登录信息接口
 
 #### 用户登录接口的密码登录接口
 ##### 基础信息
@@ -366,7 +364,7 @@
 - 得到参数后分别根据用户名,手机号和邮箱获取user表的一条数据,
 - 如果三份数据都是null则调用用户端注册接口
 - 如果三份数据都指向同一个用户而且没有被分配商户相关角色则将该用户分配ROLE_NEW_MERCHANT角色,
-- 并创建merchant_supplement表,
+- 并创建merchant_supplement表,注意新注册的商店是关店状态
 - 其他情况返回错误
 - 其中,用加密算法(这里用MD5)加密密码,同时将事先存储到redis的phoneCode和emailCode提取来验证手机和邮箱的有效性
 ##### 请求参数
@@ -513,7 +511,7 @@
 - **接口名称**: 获取个人用户详细信息
 - **接口路径**: `/api/user/user/detail/{id}`
 - **请求方法**: GET
-- **接口权限**:需要user.list权限而且(参数的id等于访问者的id或者访问者是管理员)
+- **接口权限**:需要user.list权限或者参数的id等于访问者的id
 - **接口描述**: 在用户端点击头像跳转到用户设置界面,后台或商户端前往个人中心,管理员在用户管理点击用户可触发该接口,查询该用户详细信息
 - **接口实现**:返回UserDetailVO,其中必携带BasicUserDetailVO和CurrentUserDTO,如果是商户且在商户端额外携带MerchantDetailVO,
 - 如果是管理员查看用户详细信息则额外调用获取用户的地址簿接口,携带List<userAddressVO>,MerchantDetailVO,对敏感信息进行脱敏处理
@@ -793,7 +791,7 @@
 - **接口名称**: 更新用户密码
 - **接口路径**: `/api/user/user/update/passowrd`
 - **请求方法**: PUT
-- **接口权限**: 需要user.update权限或更新者的id等于参数id
+- **接口权限**: 更新者的id等于参数id
 - **接口描述**: 更新用户密码
 - **接口实现**:传入UpdatePasswordDTO,查询当前用户,
 - 比较旧密码和新密码是否不一致,接下来比较旧密码,手机是否和查找到的用户的信息吻合,
@@ -838,7 +836,7 @@
 - **接口名称**: 换绑手机号
 - **接口路径**: `/api/user/user/update/phone`
 - **请求方法**: PUT
-- **接口权限**: 需要user.update权限或更新者的id等于参数id
+- **接口权限**: 更新者的id等于参数id
 - **接口描述**: 换绑手机号
 - **接口实现**:传入UpdatePhoneDTO,查询当前用户,
 - 比较旧手机号和新手机号是否不一致,接下来比较旧手机号是否和数据库的数据吻合,
@@ -882,7 +880,7 @@
 - **接口名称**: 换绑邮箱
 - **接口路径**: `/api/user/user/update/email`
 - **请求方法**: PUT
-- **接口权限**: 需要user.update权限或更新者的id等于参数id
+- **接口权限**: 更新者的id等于参数id
 - **接口描述**: 换绑邮箱
 - **接口实现**:传入用户UpdateEmailDTO,查询当前用户,
 - 比较旧邮箱和新邮箱是否不一致,接下来比较旧邮箱是否和数据库的数据吻合,
@@ -926,7 +924,7 @@
 - **接口名称**: 更换头像
 - **接口路径**: `/api/user/user/update/avatar`
 - **请求方法**: PUT
-- **接口权限**: 需要user.update权限或更新者的id等于参数id
+- **接口权限**: 更新者的id等于参数id
 - **接口描述**: 更换头像
 - **接口实现**: 传入UpdateAvatarDTO更换头像,查询不到用户或用户被逻辑删除则不应该执行更新
 ##### 请求参数
@@ -964,7 +962,7 @@
 - **接口名称**: 更新昵称
 - **接口路径**: `/api/user/user/update/nickName`
 - **请求方法**: PUT
-- **接口权限**: 需要user.update权限或更新者的id等于参数id
+- **接口权限**: 更新者的id等于参数id
 - **接口描述**: 更新昵称
 - **接口实现**: 传入UpdateNickNameDTO来更新昵称,查询不到用户或用户被逻辑删除则不应该执行更新
 ##### 请求参数
@@ -1002,7 +1000,7 @@
 - **接口名称**: 更新性别
 - **接口路径**: `/api/user/user/update/gender`
 - **请求方法**: PUT
-- **接口权限**: 需要user.update权限或更新者的id等于参数id
+- **接口权限**: 更新者的id等于参数id
 - **接口描述**: 更换性别
 - **接口实现**: 传入UpdateGenderDTO来更新昵称,查询不到用户或用户被逻辑删除则不应该执行更新
 ##### 请求参数
@@ -1040,7 +1038,7 @@
 - **接口名称**: 更新生日
 - **接口路径**: `/api/user/user/update/birthday`
 - **请求方法**: PUT
-- **接口权限**: 需要user.update权限或更新者的id等于参数id
+- **接口权限**: 更新者的id等于参数id
 - **接口描述**: 更新生日
 - **接口实现**: 传入UpdateBirthdayDTO,查询不到用户或用户被逻辑删除则不应该执行更新,
 - 更新后在redis进行记录,过期时间是1年,
@@ -1080,7 +1078,7 @@
 - **接口名称**: 更新地域
 - **接口路径**: `/api/user/user/update/region`
 - **请求方法**: PUT
-- **接口权限**: 需要user.update权限或更新者的id等于参数id
+- **接口权限**: 更新者的id等于参数id
 - **接口描述**: 更新地域
 - **接口实现**: 传入UpdateRegionDTO,查询不到用户或用户被逻辑删除则不应该执行更新,
 - 更新后在redis进行记录,过期时间是90天,
@@ -1120,7 +1118,7 @@
 - **接口名称**: 实名认证
 - **接口路径**: `/api/user/user/update/card`
 - **请求方法**: PUT
-- **接口权限**: 需要user.update权限或更新者的id等于参数id
+- **接口权限**: 更新者的id等于参数id
 - **接口描述**: 实名认证
 - **接口实现**: 传入UpdateCardDTO ,虽然需要对接外部API,但这里简化实现:
 - 检验IdCard格式正确后并且没有已使用的realName和IdCard则直接设置用户是已经完成实名认证的,并为用户升级角色,
@@ -1172,11 +1170,6 @@
 |--------------|------|--------|-------|-----------------------------------------|
 | Content-Type | 是    | string | 请求体类型 | application/json                        |
 | token        | 是    | string | 令牌    | eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9... |
-
-###### 请求体
-| 参数名    | 是否必填 | 数据类型   | 说明  | 示例  |
-|--------|------|--------|-----|-----|
-| id     | 是    | Long   | id  | 1   |
 
 ##### 响应数据
 ###### 响应状态码
@@ -1246,7 +1239,7 @@
 - **接口名称**: 获取个人用户地址簿
 - **接口路径**: `/api/user/userAddress/list/{id}`
 - **请求方法**: GET
-- **接口权限**: 登录而且访问者的id等于参数的id
+- **接口权限**: 访问者的id等于参数的id
 - **接口描述**: 获取个人用户地址簿
 - **接口实现**: 在用户端个人中心或后台的用户管理可查询用户端地址簿,返回List<UserAddressDTO>
 - 只需返回没有被逻辑删除的地址
@@ -1288,7 +1281,7 @@
 - **接口名称**: 新增地址簿
 - **接口路径**: `/api/user/userAddress/add`
 - **请求方法**: POST
-- **接口权限**: 登录而且访问者的id等于参数的id
+- **接口权限**: 访问者的id等于参数的id
 - **接口描述**: 新增地址簿,仅允许用户添加地址
 - **接口实现**: 传入UserAddressDTO,一个用户最多添加5个正常状态的地址簿,
 - 如果将地址设为默认地址,则将之前默认地址设为非默认地址
@@ -1335,7 +1328,7 @@
 - **接口名称**: 修改地址簿
 - **接口路径**: `/api/user/userAddress/update`
 - **请求方法**: POST
-- **接口权限**: 登录而且访问者的id等于参数的id
+- **接口权限**: 访问者的id等于参数的id
 - **接口描述**: 修改地址簿
 - **接口实现**: 传入List<UserAddressDTO>,注意只将第一个默认地址设为默认地址
 ##### 请求参数
@@ -1382,7 +1375,7 @@
 - **接口名称**: 删除地址簿
 - **接口路径**: `/api/user/userAddress/delete/{id}`
 - **请求方法**: DELETE
-- **接口权限**: 登录而且访问者的id等于参数的id
+- **接口权限**: 访问者的id等于参数的id
 - **接口描述**: 删除地址簿
 - **接口实现**: 逻辑删除地址簿
 ##### 请求参数
@@ -1454,7 +1447,7 @@
 - **接口名称**: 更新基础商户信息
 - **接口路径**: `/api/user/merchantSupplement/update/custom`
 - **请求方法**: PUT
-- **接口权限**: 需要user.update权限或更新者的id等于参数id
+- **接口权限**: 访问者的id等于参数的id
 - **接口描述**: 更新基础商户信息
 - **接口实现**: 传入UpdateMerchantCustomDTO,更新基础商户信息,查询不到用户或用户被逻辑删除则不应该执行更新
 
@@ -1495,7 +1488,7 @@
 - **接口名称**: 许可证认证
 - **接口路径**: `/api/user/merchantSupplement/update/license`
 - **请求方法**: PUT
-- **接口权限**: 需要user.update权限或更新者的id等于参数id
+- **接口权限**: 更新者的id等于参数id
 - **接口描述**: 许可证认证
 - **接口实现**: 传入UpdateMerchantLicenseDTO,提供许可证后异步通知管理员审核,应该审核后管理员手动为其升级角色,
 - 但这里实现为直接为该用户升级角色
@@ -1516,6 +1509,37 @@
   "shopLicenseImage(String)": "xxx"
   }
 ```
+
+##### 响应数据
+###### 响应状态码
+- 200: 请求成功
+- 400: 请求参数错误
+- 500: 服务器错误
+
+###### 响应体
+```json
+{
+  "code": 200,
+  "msg": "操作成功",
+  "data":null
+}
+```
+
+#### 开张/关店接口
+##### 基础信息
+- **接口名称**: 开张/关店
+- **接口路径**: `/api/user/merchantSupplement/status`
+- **请求方法**: PUT
+- **接口权限**: 需要user.update权限或访问者的id等于参数id
+- **接口描述**: 开张/关店
+- **接口实现**: 开张/关店,此时用户无法在这家店发起订单并强制取消或退货还没有完成的订单
+- 查询不到用户或用户被逻辑删除则跳过
+##### 请求参数
+###### 请求头
+| 参数名          | 是否必填 | 数据类型   | 说明    | 示例                                      |
+|--------------|------|--------|-------|-----------------------------------------|
+| Content-Type | 是    | string | 请求体类型 | application/json                        |
+| token        | 是    | string | 令牌    | eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9... |
 
 ##### 响应数据
 ###### 响应状态码
@@ -2584,7 +2608,7 @@
 - **接口名称**: 修改商品内容
 - **接口路径**: `/api/prodcut/product/update`
 - **请求方法**: PUT
-- **接口权限**: 需要product.update权限而且(访问者的id等于参数的userId或者访问者是管理员)
+- **接口权限**: 需要product.update权限而且访问者的id等于参数的userId
 - **接口描述**: 在商品管理界面更新商品内容,但不同时更新规格的内容
 - **接口实现**: 传入ProductBasicUpdateDTO,商品被逻辑删除则拒绝更新,查询到的商品存在不合法,不匹配的情况则拒绝更新
 ##### 请求参数
@@ -2901,7 +2925,7 @@
 - **接口名称**: 添加商品规格
 - **接口路径**: `/api/product/productSku/add`
 - **请求方法**: POST
-- **接口权限**: 需要product.list权限而且(访问者的id等于参数的userId或者访问者是管理员)
+- **接口权限**: 需要product.add权限而且访问者的id等于参数的userId
 - **接口描述**: 在创建商品后编辑商品时可用
 - **接口实现**: 传入ProductSkuDTO,添加商品规格后,要刷新商品的库存,注意商品规格要指向合法的商品
 ##### 请求参数
@@ -2943,7 +2967,7 @@
 - **接口名称**: 更新商品分类
 - **接口路径**: `/api/product/productSku/update`
 - **请求方法**: PUT
-- **接口权限**: 需要product.update权限而且(访问者的id等于参数的userId或者访问者是管理员)
+- **接口权限**: 需要product.update权限而且访问者的id等于参数的userId
 - **接口描述**: 在创建商品后编辑商品时可用
 - **接口实现**: 传入ProductSkuDTO,更新商品规格后,要刷新商品的库存,注意商品规格要指向合法的商品
 ##### 请求参数
@@ -3480,6 +3504,7 @@
 - **接口描述**: 用户进行下单操作
 - **接口实现**: 传入OrderAddDTO,将token信息和userId比对并检查用户是否可以正常使用,
 - 然后查看指向的商品和规格是否存在,没被删除,在上架和在正常使用,
+- 然后查看商家是否在开张,
 - 然后查看用户领取的优惠券指向的优惠券是否存在,未删除且在生效而且满足使用条件,
 - 然后查询商品和商品规格,在生成的订单添加商品快照,然后减少商品和规格的库存,
 - 然后在用户领取的优惠券标记优惠券已经使用,然后计算订单总价格和实际价格,
@@ -3601,7 +3626,7 @@
 - **接口名称**: 用户端分页查询订单列表
 - **接口路径**: `/api/order/orderMain/list/merchant`
 - **请求方法**: GET
-- **接口权限**: 需要order.list权限而且访问者的id等于参数的userId
+- **接口权限**: 需要order.list权限而且访问者的id等于参数的userId而且是商户
 - **接口描述**: 商户端在订单管理页面查看商家的所有商品的订单列表
 - **接口实现**: 在商户端根据订单的状态, 
 - 来查询没有被删除的订单的列表,
@@ -3678,7 +3703,7 @@
 - **接口名称**: 后台端分页查询订单列表
 - **接口路径**: `/api/order/orderMain/list/admin`
 - **请求方法**: GET
-- **接口权限**: 需要order.list权限
+- **接口权限**: 需要order.list权限而且是管理员
 - **接口描述**: 后台端在订单管理页面查看网站的所有订单列表
 - **接口实现**: 在后台端根据订单的状态,
 - 来查询没有被删除的订单的列表,
@@ -3874,8 +3899,8 @@
 - **接口名称**: 修改订单信息
 - **接口路径**: `/api/order/orderMain/update`
 - **请求方法**: PUT
-- **接口权限**: order.update权限而且(访问者的id等于订单的userId或访问者是管理员)
-- **接口描述**: 用户在订单状态改变后触发该接口
+- **接口权限**: 需要orderStatusLog.add权限
+- **接口描述**: 在订单状态改变后被订单日志接口调用
 - **接口实现**: 传入OrderUpdateDTO,修改订单信息
 ##### 请求参数
 ###### 请求头
@@ -3915,7 +3940,7 @@
 - **接口名称**: 订单支付
 - **接口路径**: `/api/order/orderStatusLog/pay/{id}`
 - **请求方法**: POST
-- **接口权限**: 需要orderStatusLog.add权限
+- **接口权限**: 需要orderStatusLog.add权限且访问者的id等于订单的userId
 - **接口描述**: 用户支付订单
 - **接口实现**: 传入订单id,检查订单是否处于 "待支付" 状态,直接生成order_status_log表,
 - 后续接入支付服务器,然后调用修改订单接口,解决幂等性问题,调用新增财务接口
@@ -3946,7 +3971,7 @@
 - **接口名称**: 订单发货
 - **接口路径**: `/api/order/orderStatusLog/ship/{id}`
 - **请求方法**: POST
-- **接口权限**:需要orderStatusLog.add权限
+- **接口权限**: 需要orderStatusLog.add权限且访问者的id等于订单的userId且是商家
 - **接口描述**: 商家为订单发货
 - **接口实现**: 传入订单id,检查订单是否处于 "已支付" 状态,直接生成order_status_log表,
 - 然后调用修改订单接口,解决幂等性问题
@@ -3977,8 +4002,7 @@
 - **接口名称**: 订单收货
 - **接口路径**: `/api/order/orderStatusLog/receive/{id}`
 - **请求方法**: POST
-- **接口权限**:需要orderStatusLog.add权限
-- **接口描述**: 用户为订单收货
+- **接口权限**: 需要orderStatusLog.add权限且访问者的id等于订单的userId
 - **接口实现**: 传入订单id,检查订单是否处于 "已发货" 状态,直接生成order_status_log表,
 - 然后调用修改订单接口,解决幂等性问题
 ##### 请求参数
@@ -4008,7 +4032,7 @@
 - **接口名称**: 取消订单
 - **接口路径**: `/api/order/orderStatusLog/cancel/{id}`
 - **请求方法**: POST
-- **接口权限**:需要orderStatusLog.add权限
+- **接口权限**: 需要orderStatusLog.add权限
 - **接口描述**: 订单超时为支付时触发
 - **接口实现**: 传入订单id,检查订单是否处于 "待支付" 状态,直接生成order_status_log表,
 - 然后恢复商品规格库存,然后退还优惠券给用户,然后调用修改订单接口,解决幂等性问题
@@ -4246,7 +4270,7 @@
 - **接口名称**: 后台端分页查询财务
 - **接口路径**: `/api/order/financialFlow/list`
 - **请求方法**: GET
-- **接口权限**: 需要order.list权限
+- **接口权限**: 需要financialFlow.list权限
 - **接口描述**: 后台端在订单管理页面查看网站的所有财务列表
 - **接口实现**: 返回List<FinancialFlow>并由PageResult包装
 ##### 请求参数
