--- a/projectTemplate/documents/接口文档v1.0.MD
+++ b/projectTemplate/documents/接口文档v1.0.MD
@@ -1528,11 +1528,11 @@
 #### 开张/关店接口
 ##### 基础信息
 - **接口名称**: 开张/关店
-- **接口路径**: `/api/user/merchantSupplement/status`
+- **接口路径**: `/api/user/merchantSupplement/status/{id}`
 - **请求方法**: PUT
 - **接口权限**: 需要user.update权限或访问者的id等于参数id
 - **接口描述**: 开张/关店
-- **接口实现**: 开张/关店,此时用户无法在这家店发起订单并强制取消或退货还没有完成的订单
+- **接口实现**: 传入用户id,开张/关店,此时用户无法在这家店发起订单并强制取消或退货还没有完成的订单
 - 查询不到用户或用户被逻辑删除则跳过
 ##### 请求参数
 ###### 请求头
