--- a/projectTemplate/documents/接口文档v1.0.MD
+++ b/projectTemplate/documents/接口文档v1.0.MD
@@ -515,7 +515,7 @@
 - **接口权限**:需要user.list权限或者参数的id等于访问者的id
 - **接口描述**: 在用户端点击头像跳转到用户设置界面,后台或商户端前往个人中心,管理员在用户管理点击用户可触发该接口,查询该用户详细信息
 - **接口实现**:返回UserDetailVO,其中必携带BasicUserDetailVO和CurrentUserDTO,如果是商户且在商户端额外携带MerchantDetailVO,
-- 如果是管理员查看用户详细信息则额外调用获取用户的地址簿接口,携带List<userAddressVO>,MerchantDetailVO,对敏感信息进行脱敏处理
+- 如果是管理员查看用户详细信息则额外调用获取用户的地址簿接口,携带List<userAddressDTO>,MerchantDetailVO,对敏感信息进行脱敏处理
 - 注意无论该用户是否被逻辑删除都应该被被查到,但不应该查到被删除的子信息
 ##### 请求参数
 ###### 请求头
@@ -560,7 +560,7 @@
       "updateTime": "2025-10-21T12:18:00.000+00:00",
       "deleted": false
     },
-    "userAddressVO(List<UserAddressVO>)": [
+    "userAddressDTO(List<UserAddressVO>)": [
       {
         "id": 1,
         "receiver": "张三",
@@ -1242,7 +1242,7 @@
 - **请求方法**: GET
 - **接口权限**: 访问者的id等于参数的id
 - **接口描述**: 获取个人用户地址簿
-- **接口实现**: 在用户端个人中心或后台的用户管理可查询用户端地址簿,返回List<UserAddressDTO>
+- **接口实现**: 在用户端个人中心或后台的用户管理可查询用户端地址簿,返回List<UserAddress>
 - 只需返回没有被逻辑删除的地址
 ##### 请求参数
 ###### 请求头
@@ -1257,7 +1257,7 @@
 - 400: 请求参数错误
 - 500: 服务器错误
 
-###### 响应体 List<UserAddressDTO>
+###### 响应体 List<UserAddress>
 ```json
 {
   "code": 200,
