--- a/projectTemplate/documents/接口文档v1.0.MD
+++ b/projectTemplate/documents/接口文档v1.0.MD
@@ -2306,7 +2306,7 @@
 {
   "pageNum?(DEFAULT 1)(Integer)": 1,
   "pageSize?(DEFAULT 20)(Integer)": 20,
-  "categoryCode?(DEFAULT 1)(Long)": 1,
+  "categoryId?(DEFAULT 1)(Long)": 1,
   "search?(DEFAULT '')(String)": "",
   "region?(DEFAULT '')(String)": "",
   "sort?(DEFAULT '')(String)": ""
