--- a/projectTemplate/documents/接口文档v1.0.MD
+++ b/projectTemplate/documents/接口文档v1.0.MD
@@ -2577,8 +2577,7 @@
       "specs": "颜色:褐色,尺寸:L",
       "price": 50.00,
       "stock": 100,
-      "logo": "https://example.com/logo.png",
-      "skuCode": "BM-L"
+      "logo": "https://example.com/logo.png"
     },
     {
       "...": "..."
