--- a/projectTemplate/documents/接口文档v1.0.MD
+++ b/projectTemplate/documents/接口文档v1.0.MD
@@ -3096,7 +3096,7 @@
         "createTime": "2025-10-21T12:17:56.000+00:00",
         "updateTime": "2025-10-21T12:18:00.000+00:00",
 
-        "pointer": "优惠券指向的商户昵称或标明公用优惠券"
+        "pointer": "优惠券指向的商户昵称或标明公用优惠券或商品名称"
       }
     ],
     "total": 1,
